--- a/bot_utils_files/Localization/strings/id.yml
+++ b/bot_utils_files/Localization/strings/id.yml
@@ -114,12 +114,12 @@ RENAME_DONE: "__File berhasil dinamai ulang dan diupload. Oleh FridayUserBot. Pa
 G_S: "**Kata Kunci Pencarian:**\n `{}` \n\n**Hasil:**\n {}"
 DUCK_DUCK_GO: "Biarkan saya 🦆 DuckDuckGo ini untuk anda:\n🔎 [{}]({})"
 STATS: "`Stats anda dikalkulasikan dalam {} detik`
-`Anda Memiliki {} Pesan Pribadi.`
-`Anda didalam {} Grup.`
-`Anda didalam {} Super Grup.`
-`Anda didalam {} Saluran.`
-`Anda admin di {} Percakapan.`
-`Jumlah Bot = {}`"
+\n`Anda Memiliki {} Pesan Pribadi.`
+\n`Anda didalam {} Grup.`
+\n`Anda didalam {} Super Grup.`
+\n`Anda didalam {} Saluran.`
+\n`Anda admin di {} Percakapan.`
+\n`Jumlah Bot = {}`"
 REPLY_TO_STICKER: "`Balas ke Sticker...`"
 KANG_MAGIC_: "`Menggunakan Kekuatan Sharinggan Itachi Untuk Mencuri Stiker...`"
 KANG_FULL: "Kang Pack Vol __{}__ Penuh! Pindah ke Vol __{}__ Kang Pack"
